2012-12-04  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: remove obsolete assert.

2012-12-03  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: fixed coredump after trying to start a duplicate torrent.

2012-11-14  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc: fixed status message.
	* buffer.cc, buffer.h: limit maximum buffer size.
	* ftpclass.cc: use buffer size limit; don't Resume on several methods;
	  fixed CWD for certain paths; fixed try count resetting on uploading.

2012-09-27  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: add support for base32 btih in magnet.

2012-09-26  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: call AtFinish after parsing an empty command.

2012-09-26  Christoph Junghans <ottxor@gentoo.org>

	* module.cc: use ".bundle" for Darwin.

2012-09-26  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h: (ends_with) new method.

2012-09-24  Robert Story <rstory@tislabs.com>

	* Resolver.cc: fix a typo in error message and add a warning for
	  untrusted domains if dns:strict-dnssec is not set.

2012-08-30  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_tinfo.cc: fixed termcap coredump.

2012-08-27  Alexander V. Lukyanov <lav@yars.free.net>

	* DHT.cc, DHT.h: add rate limit; improve FindNodes by checking
	  PrefixMatch on every next route bucket.
	* Torrent.cc, Torrent.h: add name.utf-8 and path.utf-8 support.
	* DHT.cc, DHT.h: remove name (unknown encoding); better printing
	  of route prefix; (DHT::KnownTorrent::AddPeer) new method.

2012-08-24  Alexander V. Lukyanov <lav@yars.free.net>

	* network.cc: fixed port byte order in compact.
	* Torrent.cc, Torrent.h: split DHT off; save DHT to separate directory;
	  check peer duplication and black-listing after setting port.
	* DHT.cc, DHT.h: new files; send pings only when there is new node
	  candidate and bucket is full; limit ping rate; change disk-cache