@@ -1,3 +1,7 @@
+2012-12-13  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* CmdExec.cc: don't show status line unless interactive.
+
 2012-12-04  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* ftpclass.cc: remove obsolete assert.
